[project]
name = "fleetrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "absl-py==2.1.0",
    "ale-py==0.8.1",
    "alembic==1.13.1",
    "autorom-accept-rom-license==0.6.1",
    "autorom[accept-rom-license]==0.6.1",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "colorlog==6.8.2",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "filelock==3.14.0",
    "fonttools==4.52.1",
    "fsspec==2024.5.0",
    "greenlet==3.0.3",
    "grpcio==1.64.0",
    "gymnasium==0.29.1",
    "idna==3.7",
    "importlib-resources==6.4.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jinja2==3.1.4",
    "kiwisolver==1.4.5",
    "mako==1.3.5",
    "markdown==3.6",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "optuna==3.6.1",
    "packaging==24.0",
    "pandas==2.2.2",
    "pillow==10.3.0",
    "pink-noise-rl==2.0.1",
    "plotly==5.22.0",
    "ply==3.11",
    "protobuf==5.27.0",
    "psutil==5.9.8",
    "pygame==2.5.2",
    "pygments==2.18.0",
    "pyomo==6.7.2",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "rainflow==3.2.0",
    "requests==2.32.2",
    "rich==13.7.1",
    "seaborn==0.13.2",
    "shimmy[atari]==1.3.0",
    "six==1.16.0",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy==2.0.30",
    "stable-baselines3[extra]==2.3.2",
    "sympy==1.12",
    "tenacity==8.3.0",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "torch==2.3.0",
    "tqdm==4.66.4",
    "typing-extensions==4.12.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "werkzeug==3.0.3",
]
